--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "xaycon-scraper-api",
   "version": "1.0.0",
-  "description": "API to scrape match data from xaycon.live with auto-refresh every minute",
+  "description": "API to scrape match data from xaycon.live",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node test-api.js"
   },
   "keywords": [
-    "api",
-    "scraping",
-    "puppeteer",
-    "express",
-    "render"
+    "scraper",
+    "football",
+    "matches",
+    "api"
   ],
   "author": "",
   "license": "MIT",
@@ -22,12 +22,13 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "^24.23.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
