--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API to scrape match data from xaycon.live",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node --expose-gc server.js",
+    "start:no-gc": "node server.js",
+    "dev": "nodemon --expose-gc server.js",
     "test": "node test-api.js"
   },
   "keywords": [
