fix: Add Chrome installation for Render deployment
 Problem:
- Chrome browser not found on Render.com
- Error: Could not find Chrome (ver. 141.0.7390.54)
- Puppeteer failed to launch browser

 Solution:
- Add postinstall script to install Chrome after npm install
- Update render.yaml buildCommand to install Chrome
- Add PUPPETEER_CACHE_DIR environment variable
- Use 'npx puppeteer browsers install chrome' command

 Files Changed:
- package.json: Add postinstall script
- render.yaml: Update buildCommand and add env var

 This fix ensures Chrome is installed during build phase on Render

--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,12 @@ services:
     type: web
     runtime: node
     plan: free
-    buildCommand: npm install
+    buildCommand: npm install && npx puppeteer browsers install chrome
     startCommand: npm start
     healthCheckPath: /api/status
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PUPPETEER_CACHE_DIR
+        value: /opt/render/.cache/puppeteer
     autoDeploy: true
