fix: Add Chrome installation for Render deployment
 Problem:
- Chrome browser not found on Render.com
- Error: Could not find Chrome (ver. 141.0.7390.54)
- Puppeteer failed to launch browser

 Solution:
- Add postinstall script to install Chrome after npm install
- Update render.yaml buildCommand to install Chrome
- Add PUPPETEER_CACHE_DIR environment variable
- Use 'npx puppeteer browsers install chrome' command

 Files Changed:
- package.json: Add postinstall script
- render.yaml: Update buildCommand and add env var

 This fix ensures Chrome is installed during build phase on Render

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node --expose-gc server.js",
     "start:no-gc": "node server.js",
     "dev": "nodemon --expose-gc server.js",
-    "test": "node test-api.js",
-    "postinstall": "npx puppeteer browsers install chrome || echo 'Chrome installation skipped'"
+    "test": "node test-api.js"
   },
   "keywords": [
     "scraper",
