--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,10 @@ services:
     type: web
     runtime: node
     plan: free
-    buildCommand: npm install && npx puppeteer browsers install chrome
+    buildCommand: npm install
     startCommand: npm start
     healthCheckPath: /api/status
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PUPPETEER_CACHE_DIR
-        value: /opt/render/.cache/puppeteer
     autoDeploy: true
