--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node --expose-gc server.js",
     "start:no-gc": "node server.js",
     "dev": "nodemon --expose-gc server.js",
-    "test": "node test-api.js"
+    "test": "node test-api.js",
+    "postinstall": "node node_modules/puppeteer/install.mjs"
   },
   "keywords": [
     "scraper",
